--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,16 +44,65 @@ const { title } = Astro.props;
         "@context": "https://schema.org/",
         "@type": "Service",
         "serviceType": "vehicle battery spare parts",
+        "hasOfferCatalog": {
+          "@type": "OfferCatalog",
+          "name": "Car Batteries",
+          "itemListElement": [
+            {
+              "@type": "OfferCatalog",
+              "name": "Replacement batteries",
+              "itemListElement": [
+                {
+                  "@type": "Offer",
+                  "itemOffered": {
+                    "@type": "Service",
+                    "name": "Car battery replacement"
+                  }
+                },
+                {
+                  "@type": "Offer",
+                  "itemOffered": {
+                    "@type": "Service",
+                    "name": "Car battery replacement 24h"
+                  }
+                },
+                {
+                  "@type": "Offer",
+                  "itemOffered": {
+                    "@type": "Service",
+                    "name": "Car battery replacement Madrid"
+                  }
+                },
+                {
+                  "@type": "Offer",
+                  "itemOffered": {
+                    "@type": "Service",
+                    "name": "Car battery replacement Toledo"
+                  }
+                }
+              ]
+            }
+          ]
+        }
         "provider": {
           "@type": "LocalBusiness",
           "name": "Baterías Express 24h"
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "C. Cataluña, 36, local 2-1",
+            "addressLocality": "Getafe",
+            "postalCode": "28903",
+            "addressRegion": "Madrid",
+            "addressCountry": "ES"
+          },
         },
         "priceRange": "100,500",
         "areasServed": "Madrid, Toledo",
         "paymentAccepted": "Tarjeta,Efectivo,credit card, cash",
         "openingHours": "Mo-Su",
         "telephone": "+34604974571",
-        "email": "recambiosexpressbaterias@gmail.com"
+        "email": "recambiosexpressbaterias@gmail.com",
+        "keywords": "recambios, madrid, automóvil, batería, baterías, coche, automovil, vehiculo, madrid, toledo, rápido, express, servicio, 24 horas, calidad, llama, bateriascoche24horas, getafe, 24h, reparación, cambio, baterias, baterias24h, baterias24horas",
       }
     </script>
     <title>{title}</title>
