--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -102,7 +102,7 @@ const { title } = Astro.props;
         "openingHours": "Mo-Su",
         "telephone": "+34604974571",
         "email": "recambiosexpressbaterias@gmail.com",
-        "keywords": "recambios, madrid, automóvil, batería, baterías, coche, automovil, vehiculo, madrid, toledo, rápido, express, servicio, 24 horas, calidad, llama, bateriascoche24horas, getafe, 24h, reparación, cambio, baterias, baterias24h, baterias24horas",
+        "keywords": "recambios, madrid, automóvil, batería, baterías, coche, automovil, vehiculo, madrid, toledo, rápido, express, servicio, 24 horas, calidad, llama, bateriascoche24horas, getafe, 24h, reparación, cambio, baterias, baterias24h, baterias24horas"
       }
     </script>
     <title>{title}</title>
