hotfix (layout seo): se soluciona el error por coma

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -86,7 +86,7 @@ const { title } = Astro.props;
         },
         "provider": {
           "@type": "LocalBusiness",
-          "name": "Baterías Express 24h"
+          "name": "Baterías Express 24h",
           "address": {
             "@type": "PostalAddress",
             "streetAddress": "C. Cataluña, 36, local 2-1",
