--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -54,29 +54,28 @@ const { title, description } = about;
 </div>
 
 <script>
-  document.addEventListener("DOMContentLoaded", initializeSlider);
+  document.addEventListener("DOMContentLoaded", initializeSlider, { passive: true });
 
   const slides = document.querySelectorAll(".battery-image");
   let slideIndex = 0;
   let intervalId = null;
 
   function initializeSlider() {
-    if(slides.length > 0) {
-      slides[slideIndex].classList.remove("hidden");
-      slides[slideIndex].classList.add("animate-fade-in-right");
-      intervalId = setInterval(nextSlide,3000);
+    if (slides.length > 0) {
+      showSlide(slideIndex);
+      intervalId = setInterval(nextSlide, 3000);
     }
   }
 
   function showSlide(index) {
     if (index >= slides.length) {
       slideIndex = 0;
-    } else if(index < 0){
-      slideIndex = slides.length -1;
+    } else if (index < 0) {
+      slideIndex = slides.length - 1;
     }
-    slides.forEach(slide => {
+    slides.forEach((slide) => {
       slide.classList.add("hidden");
-    })
+    });
     slides[slideIndex].classList.remove("hidden");
     slides[slideIndex].classList.add("animate-fade-in-right");
   }
