--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -58,7 +58,7 @@ import SelectIcon from "@icons/select-icon.astro";
         width="100%"
         height="400"
         style="border:0;border-radius: 8px;"
-        allowfullscreen=""
+        allowfullscreen="true"
         loading="eager"
         title="Mapa de ubicación de Recambios Las Margaritas en Getafe, Madrid"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
