Edit: texts to improve google searching

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,20 +21,20 @@ const { title } = Astro.props;
     <meta name="theme-color" content="#334155" />
     <meta
       name="description"
-      content="Baterías Express ofrece cambio de baterías 24h en Madrid, Toledo y alrededores. ¡Llámanos y te ayudaremos en lo que necesites!"
+      content="Baterías coches 24h ofrece cambio de baterías 24h en Madrid, Toledo y alrededores. ¡Llámanos y te ayudaremos en lo que necesites!"
     />
     <meta
       name="keywords"
-      content="recambios, madrid, repuestos, accesorios, automóvil, piezas, baterías, coche, tienda, madrid, toledo, rápido, express, servicio, 24 horas, calidad, llama"
+      content="recambios, madrid, repuestos, accesorios, automóvil, piezas, baterías,batería coche, tienda, madrid, toledo, rápido, express, servicio, 24 horas, calidad, llama, urgente"
     />
     <meta name="author" content="Kelvin Guerrero - Michael Retamozo" />
     <meta
       property="og:title"
-      content="Baterías Express - Madrid - Toledo - Alrededores"
+      content="Baterías Coches 24H - Madrid - Toledo - Alrededores"
     />
     <meta
       property="og:description"
-      content="Baterías Express ofrece cambio de baterías 24h en Madrid, Toledo y alrededores. ¡Llámanos y te ayudaremos en lo que necesites! Tel: 604 974 571"
+      content="Baterías Coches 24H ofrece cambio de baterías 24h en Madrid, Toledo y alrededores. ¡Llámanos y te ayudaremos en lo que necesites! Tel: 604 974 571"
     />
     <meta property="og:image" content="/logo.webp" />
     <meta property="og:url" content="https://www.bateriasexpress.es" />
