--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Footer from '@components/sections/Footer.astro';
 import Brands from '@components/sections/Brands.astro';
 ---
 
-<Layout title="Recambio de Baterías Express - Servicio 24 Horas">
+<Layout title="Baterías de coches a domicilio - Servicio 24 Horas">
 	<BlurBackground />
 	<Header />
 	<main class="relative">
