--- a/src/components/shared/Logo.astro
+++ b/src/components/shared/Logo.astro
@@ -21,7 +21,7 @@ import logoSvg from "@assets/svg/logo.svg";
       <span
         itemprop="name"
         class="flex flex-col leading-4 md:flex-row md:leading-none text-[#071c3b] dark:text-white sm:gap-1"
-        >Baterías<strong class="text-[#f6c543] uppercase">Express</strong
+        >Baterías<strong class="text-[#f6c543] uppercase">Coches 24h</strong
         ></span>
     </h1>
   </a>
